[add] avoid horizontal scroll

--- a/src/index.css
+++ b/src/index.css
@@ -12,4 +12,6 @@ body {
   background-repeat: no-repeat;
 
   font-family: 'Merriweather', serif;
+
+  overflow-x: hidden;
 }
